can not answer column content alignment fix

--- a/source/sass/partials/feedback-fixed/_fixed-feedback-grid.scss
+++ b/source/sass/partials/feedback-fixed/_fixed-feedback-grid.scss
@@ -261,5 +261,6 @@
     width: 125px;
     padding-left: 10px;
     padding-right: 10px;
+    text-align: center;
   }
 }
